[gd_scene load_steps=8 format=3 uid="uid://bqcgxr3g1cb3"]

[ext_resource type="Script" path="res://scenes/UI/hud.gd" id="1_5f6x3"]
[ext_resource type="Texture2D" uid="uid://bojvnionogv12" path="res://assets/sprites/coin.png" id="2_2t2tb"]
[ext_resource type="Texture2D" uid="uid://d3o1buglkn5ro" path="res://assets/sprites/scale.png" id="2_67ljv"]
[ext_resource type="FontFile" uid="uid://qrfyu0t3l5cu" path="res://assets/fonts/monogram.ttf" id="2_ams42"]
[ext_resource type="Texture2D" uid="uid://bt2ain21ege0m" path="res://assets/sprites/ui/pause.png" id="4_5kg27"]
[ext_resource type="Texture2D" uid="uid://d2e1pvqil42lm" path="res://assets/sprites/used in-game weapons/cannon.png" id="6_6q0y0"]
[ext_resource type="Texture2D" uid="uid://nyleu6ag4bmh" path="res://assets/sprites/used in-game weapons/crossbow.png" id="7_6m4mn"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_5f6x3")

[node name="ScalesLabel" type="Label" parent="."]
offset_left = 19.0
offset_top = 1.0
offset_right = 37.0
offset_bottom = 27.0
scale = Vector2(0.6, 0.6)
theme_override_fonts/font = ExtResource("2_ams42")
theme_override_font_sizes/font_size = 32
text = "0"
metadata/_edit_group_ = true

[node name="ScalesIcon" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 5.0
offset_top = 4.0
offset_right = 17.0
offset_bottom = 16.0
texture = ExtResource("2_67ljv")
expand_mode = 1
metadata/_edit_group_ = true

[node name="TimerLabel" type="Label" parent="."]
offset_left = 137.0
offset_right = 177.0
offset_bottom = 23.0
horizontal_alignment = 1

[node name="PauseButton" type="Button" parent="."]
process_mode = 3
texture_filter = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -21.0
offset_bottom = 25.0
grow_horizontal = 0
focus_mode = 0
icon = ExtResource("4_5kg27")
flat = true
expand_icon = true

[node name="PauseLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -15.0
offset_right = 36.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ams42")
theme_override_font_sizes/font_size = 32
text = "PAUSED"
horizontal_alignment = 1

[node name="MoneyIcon" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 47.0
offset_top = 2.0
offset_right = 63.0
offset_bottom = 18.0
texture = ExtResource("2_2t2tb")
expand_mode = 1
metadata/_edit_group_ = true

[node name="MoneyLabel" type="Label" parent="."]
offset_left = 64.0
offset_top = 1.0
offset_right = 96.0
offset_bottom = 27.0
scale = Vector2(0.6, 0.6)
theme_override_fonts/font = ExtResource("2_ams42")
theme_override_font_sizes/font_size = 32
text = "0"
metadata/_edit_group_ = true

[node name="MoneyIcon2" type="TextureRect" parent="."]
visible = false
texture_filter = 1
offset_left = 39.0
offset_top = 26.0
offset_right = 55.0
offset_bottom = 42.0
texture = ExtResource("2_2t2tb")
expand_mode = 1
metadata/_edit_group_ = true

[node name="CannonIcon" type="TextureRect" parent="."]
visible = false
texture_filter = 1
offset_left = 1.0
offset_top = 25.0
offset_right = 26.0
offset_bottom = 42.0
texture = ExtResource("6_6q0y0")
expand_mode = 1
metadata/_edit_group_ = true

[node name="CrossbowIcon" type="TextureRect" parent="."]
visible = false
texture_filter = 1
offset_left = 1.0
offset_top = 49.0
offset_right = 26.0
offset_bottom = 66.0
texture = ExtResource("7_6m4mn")
expand_mode = 1
metadata/_edit_group_ = true

[node name="CannonLabel" type="Label" parent="."]
visible = false
offset_left = 28.0
offset_top = 25.0
offset_right = 100.0
offset_bottom = 51.0
scale = Vector2(0.6, 0.6)
theme_override_fonts/font = ExtResource("2_ams42")
theme_override_font_sizes/font_size = 32
text = "=   20"
metadata/_edit_group_ = true

[node name="CrossbowLabel" type="Label" parent="."]
visible = false
offset_left = 29.0
offset_top = 47.0
offset_right = 101.0
offset_bottom = 73.0
scale = Vector2(0.6, 0.6)
theme_override_fonts/font = ExtResource("2_ams42")
theme_override_font_sizes/font_size = 32
text = "=   15"
metadata/_edit_group_ = true

[node name="FloorLabel" type="Label" parent="."]
visible = false
offset_left = 39.0
offset_top = 68.0
offset_right = 111.0
offset_bottom = 94.0
scale = Vector2(0.6, 0.6)
theme_override_fonts/font = ExtResource("2_ams42")
theme_override_font_sizes/font_size = 32
text = "=   50"
metadata/_edit_group_ = true

[node name="MoneyIcon3" type="TextureRect" parent="."]
visible = false
texture_filter = 1
offset_left = 39.0
offset_top = 47.0
offset_right = 55.0
offset_bottom = 63.0
texture = ExtResource("2_2t2tb")
expand_mode = 1
metadata/_edit_group_ = true

[node name="MoneyIcon4" type="TextureRect" parent="."]
visible = false
texture_filter = 1
offset_left = 49.0
offset_top = 69.0
offset_right = 65.0
offset_bottom = 85.0
texture = ExtResource("2_2t2tb")
expand_mode = 1
metadata/_edit_group_ = true

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
